2005-05-07    <mschimek@users.sf.net>

	* src/io.c (vbi_capture_io_update_timeout): Replaced assertion that
	  time increments between successive gettimeofday calls, which isn't
	  necessarily true, by absolute value of delta.

2005-04-27    <mschimek@users.sf.net>

	* test/caption.c, test/osc.c: vbi_printable() undefined.
	* test/osc.c (decode_vps): s/vbi_bit_reverse[]/vbi_rev8(). 
	(decode_ttx): s/vbi_hamm16()/vbi_unham16p().
	* configure.in: Bumped version number to 0.2.16. HAVE_X
	  conditional was backwards, didn't compile test/osc and
	  test/caption.

2005-03-28    <mschimek@users.sf.net>

	* Release 0.2.15.

2005-03-28    <mschimek@users.sf.net>

	* src/raw_decoder.c (_vbi_sampling_par_verify): Disabled a YUV420
	  even bytes per line check because it conflicts with the ivtv driver,
	  which returns an odd number of bytes per line using _GREY format,
	  mapped to YUV420 because libzvbi 0.2 has no VBI_PIXFMT_Y8.
	* configure.in: Bumped version number to 0.2.15, .so version to 6:1:6.

2005-02-28    <mschimek@users.sf.net>

	* Release 0.2.14.

2005-02-25    <mschimek@users.sf.net>

	* src/cache.c (destroy_list): Suppress unused parameter warning.
	* src/Makefile.am (libzvbi_la_SOURCES): Added pfc_demux.c, pfc_demux.h.
	(LIBZVBI_HDRS): Added pfc_demux.h.
	* doc/Doxyfile: Is a built file, removed from CVS.
	* configure.in: Bumped version number to 0.2.14.

2005-02-20    <mschimek@users.sf.net>

	* test/decode.c: Enabled pfc code.
	* src/packet.c, src/vbi.h: page_clear code replaced by
	  _vbi_pfc_demux. Disabled until rewrite and test.
	* src/event.h: struct pfc_block obsolete, removed.
	* src/idl_demux.c, src/idl_demux.h: New Teletext page
	  format clear demultiplexer from branch 0.3.

2005-02-17    <mschimek@users.sf.net>

	* src: Regrouped doxumentation.
	* test/decode.c: New low level VBI decoder from branch 0.3.
	  Commented out future stuff, made a few corrections and
	  added vbi_idl_demux routines.
	* test/README: Added decode blurb.